--- a/src/connect.html
+++ b/src/connect.html
@@ -462,7 +462,7 @@
                                 </div>
                             </div><div class="g-cols wpb_row offset_wide">
                                 <div class="full-width">
-                                    <span class="wpb_button align_center"><a href="https://emby.media/community/index.php?app=core&amp;module=global&amp;section=register" target="_blank" class="g-btn color_primary type_raised size_big"><i class="fa fa-pencil"></i><span>Sign Up</span><span class="ripple-container"></span></a></span>
+                                    <span class="wpb_button align_center"><a href="community/index.php?app=core&amp;module=global&amp;section=register" target="_blank" class="g-btn color_primary type_raised size_big"><i class="fa fa-pencil"></i><span>Sign Up</span><span class="ripple-container"></span></a></span>
                                 </div>
                             </div>
                         </div>
