--- a/src/emby-for-appletv.html
+++ b/src/emby-for-appletv.html
@@ -430,7 +430,7 @@
 
                                     <h2><span>Available NOW on your 4th Gen Apple TV</span></h2><p>&nbsp;</p><p>
                                         <span rel='lightbox'>
-                                            <img class='bbc_img' src='https://emby.media/community/uploads/inline/3/57016b25001ab_DeviceHome.png' alt='Po
+                                            <img class='bbc_img' src='community/uploads/inline/3/57016b25001ab_DeviceHome.png' alt='Po
 
 
 sted Image' />
@@ -440,32 +440,32 @@ sted Image' />
                                     <h2>Smart Home Screen</h2>
                                     <p><span style='font-size: 18px'>Find what you want quickly and easily with a smart home screen design as well as individualized displays for each media type. Or use the full search capabilities including voice dictation <span style='font-size: 12px'>(requires tvOS 9.2)</span>.</span></p>
 
-                                    <p><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/57016ba800b2d_Home.png' alt='Posted Image' /></span></p>
+                                    <p><span rel='lightbox'><img class='bbc_img' src='community/uploads/inline/3/57016ba800b2d_Home.png' alt='Posted Image' /></span></p>
 
 
                                     <h2>Easy Browsing</h2>
                                     <p><span style='font-size: 18px'>Or browse your TV and Movie collections with ease with smart library landing pages and grid views as well as search integration. </p>
 
-                                    <p><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/57016c3ac0ccf_TV.png' alt='Posted Image' /></span><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/57016c52ab533_AllMovies.png' alt='Posted Image' /></span></p>
+                                    <p><span rel='lightbox'><img class='bbc_img' src='community/uploads/inline/3/57016c3ac0ccf_TV.png' alt='Posted Image' /></span><span rel='lightbox'><img class='bbc_img' src='community/uploads/inline/3/57016c52ab533_AllMovies.png' alt='Posted Image' /></span></p>
 
                                     <h2>See All the Details</h2>
                                     <p><span style='font-size: 18px'>A beautiful detail screen presentation allows you access to all the information for a particular item as well as cast, related content and suggestions.</p>
 
-                                     <p><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/57016c7c2a846_Moviedetail3.png' alt='Posted Image' /></span>
+                                     <p><span rel='lightbox'><img class='bbc_img' src='community/uploads/inline/3/57016c7c2a846_Moviedetail3.png' alt='Posted Image' /></span>
 
-                                    <span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/57016caa49efb_SeriesDetail.png' alt='Posted Image' /></span></p>
+                                    <span rel='lightbox'><img class='bbc_img' src='community/uploads/inline/3/57016caa49efb_SeriesDetail.png' alt='Posted Image' /></span></p>
 
                                     <h2>Hear the Music</h2>
                                     <p><span style='font-size: 18px'>Emby for Apple TV knows music too with easy access to artists albums and playlists.</p>
 
-                                    <p><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/57016cd7146d1_Music.png' alt='Posted Image' /></span></p>
+                                    <p><span rel='lightbox'><img class='bbc_img' src='community/uploads/inline/3/57016cd7146d1_Music.png' alt='Posted Image' /></span></p>
 
-                                    <span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/57016cfa1c56e_Album.png' alt='Posted Image' /></span>
+                                    <span rel='lightbox'><img class='bbc_img' src='community/uploads/inline/3/57016cfa1c56e_Album.png' alt='Posted Image' /></span>
 
                                     <h2>Picture Perfect</h2>
                                     <p><span style='font-size: 18px'>Even your photos will look more beautiful in the Emby for Apple TV interface.</p>
 
-                                    <p><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/57016e3c76876_Photos.png' alt='Posted Image' /></span></p>
+                                    <p><span rel='lightbox'><img class='bbc_img' src='community/uploads/inline/3/57016e3c76876_Photos.png' alt='Posted Image' /></span></p>
 
                                     <p>&nbsp;</p><p>* Live TV not yet supported</p>
 
@@ -482,7 +482,7 @@ sted Image' />
                                         <span class="wpb_button align_left"><a href="https://github.com/MediaBrowser/Wiki/wiki/Apple%20TV" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
                                     </div>
                                     <div>
-                                        <span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/forum/162-tvos-apple-tv" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Community</span><span class="ripple-container"></span></a></span>
+                                        <span class="wpb_button align_left"><a href="community/index.php?/forum/162-tvos-apple-tv" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Community</span><span class="ripple-container"></span></a></span>
                                     </div>
                                 </div>
                             </div>
