--- a/src/emby-for-samsung-smart-tv.html
+++ b/src/emby-for-samsung-smart-tv.html
@@ -448,16 +448,16 @@
 
                                 <p>Users outside the USA, UK and Ireland can install from USB.</p>
                                 <div>
-                                    <span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/topic/9869-samsung-smart-tv-app-install-instructions/?p=277344" target="_blank" class="g-btn color_primary type_raised"><span>2014 H-Series</span><span class="ripple-container"></span></a></span>
+                                    <span class="wpb_button align_left"><a href="community/index.php?/topic/9869-samsung-smart-tv-app-install-instructions/?p=277344" target="_blank" class="g-btn color_primary type_raised"><span>2014 H-Series</span><span class="ripple-container"></span></a></span>
                                 </div>
                                 <div>
-                                    <span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/topic/9869-samsung-smart-tv-app-install-instructions/?p=277345" target="_blank" class="g-btn color_primary type_raised"><span>2013 F-Series</span><span class="ripple-container"></span></a></span>
+                                    <span class="wpb_button align_left"><a href="community/index.php?/topic/9869-samsung-smart-tv-app-install-instructions/?p=277345" target="_blank" class="g-btn color_primary type_raised"><span>2013 F-Series</span><span class="ripple-container"></span></a></span>
                                 </div>
                                 <div>
-                                    <span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/topic/9869-samsung-smart-tv-app-install-instructions/?p=277346" target="_blank" class="g-btn color_primary type_raised"><span>2012 E-Series</span><span class="ripple-container"></span></a></span>
+                                    <span class="wpb_button align_left"><a href="community/index.php?/topic/9869-samsung-smart-tv-app-install-instructions/?p=277346" target="_blank" class="g-btn color_primary type_raised"><span>2012 E-Series</span><span class="ripple-container"></span></a></span>
                                 </div>
                                 <div>
-                                    <span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/topic/9869-samsung-smart-tv-app-install-instructions/?p=277348" target="_blank" class="g-btn color_primary type_raised"><span>2011 D-Series</span><span class="ripple-container"></span></a></span>
+                                    <span class="wpb_button align_left"><a href="community/index.php?/topic/9869-samsung-smart-tv-app-install-instructions/?p=277348" target="_blank" class="g-btn color_primary type_raised"><span>2011 D-Series</span><span class="ripple-container"></span></a></span>
                                 </div>
                             </div>
                         </div>
