--- a/src/index.html
+++ b/src/index.html
@@ -701,7 +701,7 @@
                                         Join the best group of media enthusiasts around and share your experiences with us. We’re all working together to make our media more fun!
                                     </p>
                                 </div>
-                            </div> <span class="wpb_button align_left"><a href="https://emby.media/community" class="g-btn color_white type_raised"><i class="mdfi_social_people"></i><span>Visit the Community</span><span class="ripple-container"></span></a></span>
+                            </div> <span class="wpb_button align_left"><a href="community" class="g-btn color_white type_raised"><i class="mdfi_social_people"></i><span>Visit the Community</span><span class="ripple-container"></span></a></span>
                         </div>
                     </div>
                 </div>
