--- a/src/pin.html
+++ b/src/pin.html
@@ -449,7 +449,7 @@
                         </div>
                     </div><!-- Row Backgrounds --><div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="" data-parallax-content="" data-parallax-content-sense="" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div><div class="g-cols wpb_row offset_wide">
                         <div class="full-width">
-                            <span class="wpb_button align_center"><a href="https://emby.media/community/index.php?app=core&amp;module=global&amp;section=register" target="_blank" class="g-btn color_primary type_raised size_big"><i class="fa fa-edit"></i><span>Sign Up</span><span class="ripple-container"></span></a></span>
+                            <span class="wpb_button align_center"><a href="community/index.php?app=core&amp;module=global&amp;section=register" target="_blank" class="g-btn color_primary type_raised size_big"><i class="fa fa-edit"></i><span>Sign Up</span><span class="ripple-container"></span></a></span>
                         </div>
                     </div><!-- Row Backgrounds --><div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="" data-parallax-content="" data-parallax-content-sense="" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
                 </div>
