--- a/src/emby-for-android-mobile.html
+++ b/src/emby-for-android-mobile.html
@@ -439,7 +439,7 @@
                                         <span class="wpb_button align_left"><a href="https://github.com/MediaBrowser/Wiki/wiki/Android%20Mobile" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
                                     </div>
                                     <div>
-                                        <span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/forum/93-android-mobile/" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Community</span><span class="ripple-container"></span></a></span>
+                                        <span class="wpb_button align_left"><a href="community/index.php?/forum/93-android-mobile/" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Community</span><span class="ripple-container"></span></a></span>
                                     </div>
                                 </div>
                             </div>
