--- a/src/emby-for-android-tv.html
+++ b/src/emby-for-android-tv.html
@@ -447,7 +447,7 @@
                                         <span class="wpb_button align_left"><a href="https://github.com/MediaBrowser/Wiki/wiki/Android%20TV" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
                                     </div>
                                     <div>
-                                        <span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/forum/147-android-tv-fire-tv" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Community</span><span class="ripple-container"></span></a></span>
+                                        <span class="wpb_button align_left"><a href="community/index.php?/forum/147-android-tv-fire-tv" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Community</span><span class="ripple-container"></span></a></span>
                                     </div>
                                 </div>
                             </div>
