--- a/src/emby-for-ios.html
+++ b/src/emby-for-ios.html
@@ -438,7 +438,7 @@
                                         <span class="wpb_button align_left"><a href="https://github.com/MediaBrowser/Wiki/wiki/iOS" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
                                     </div>
                                     <div>
-                                        <span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/forum/94-ios/" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Community</span><span class="ripple-container"></span></a></span>
+                                        <span class="wpb_button align_left"><a href="community/index.php?/forum/94-ios/" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Community</span><span class="ripple-container"></span></a></span>
                                     </div>
                                 </div>
                             </div> <div class="g-cols wpb_row offset_wide"><div class="full-width"></div></div><div class="g-cols wpb_row offset_wide"></div><div class="full-width"></div>
