--- a/src/server-android.html
+++ b/src/server-android.html
@@ -444,7 +444,7 @@
                             <div class="wpb_text_column ">
                                 <div class="wpb_wrapper">
                                     <h4>Resources</h4>
-                                    <span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/forum/179-android-server" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-users"></i><span>Community</span><span class="ripple-container"></span></a></span>
+                                    <span class="wpb_button align_left"><a href="community/index.php?/forum/179-android-server" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-users"></i><span>Community</span><span class="ripple-container"></span></a></span>
                                 </div>
                             </div>
                         </div>
