--- a/src/support.html
+++ b/src/support.html
@@ -409,7 +409,7 @@
                     <div class="g-cols wpb_row offset_wide">
                         <div class="one-quarter">
                             <div class="aio-icon-component   style_2">
-                                <a class="aio-icon-box-link" href="https://emby.media/community" target=" _blank">
+                                <a class="aio-icon-box-link" href="community" target=" _blank">
                                     <div class="aio-icon-box top-icon" style="">
                                         <div class="aio-icon-top">
                                             <div class="ult-just-icon-wrapper ">
