--- a/src/freebsd-server.html
+++ b/src/freebsd-server.html
@@ -447,7 +447,7 @@
                                 </div>
 
                                 <div><b>Install dependencies:</b></div>
-                                <div><code>sudo pkg install mono libass fontconfig freetype2 fribidi gnutls iconv opus samba48 sqlite3 libtheora libva libvpx libvorbis webp libx264 libx265 libzvbi libraw ImageMagick6</code></div>
+                                <div><code>sudo pkg install mono libass fontconfig freetype2 fribidi gnutls iconv opus samba48 sqlite3 libtheora libva libvpx libvorbis webp libx264 x265 libzvbi libraw ImageMagick6</code></div>
                                 <br />
                                 <div><b>Install Emby Server on FreeBSD 11.2:</b></div>
                                 <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-freebsd11_{version}_amd64.txz">pkg add -f {url}</code></div>
