--- a/src/emby-for-samsung-smart-tv.html
+++ b/src/emby-for-samsung-smart-tv.html
@@ -446,7 +446,7 @@
                                 <p>Emby is available for download and installation on your Samsung Smart TV.</p>
                                 <p>Users in the USA, UK, and Ireland can install Emby in Samsung App Store.</p>
 
-                                <p>Users outside the USA, UK and Ireland can install from USB.</p>
+                                <p>Users outside the USA, UK and Ireland can <a href="https://emby.media/community/index.php?/topic/74969-samsung-tizen-smarttv-2015-present-beta-app-install-from-usb" target="_blank">Install from USB</a>.</p>
                                 <div>
                                     <span class="wpb_button align_left"><a href="community/index.php?/topic/9869-samsung-smart-tv-app-install-instructions/?p=277344" target="_blank" class="g-btn color_primary type_raised"><span>2014 H-Series</span><span class="ripple-container"></span></a></span>
                                 </div>
