Remove broken function

--- a/src/pin.html
+++ b/src/pin.html
@@ -410,16 +410,11 @@
                                     <div class="textwidget">
                                         <div style="text-align: center;">
                                             <form id="confirmForm" style="margin: 0 auto; width: 100%; max-width: 400px;" target="_blank">
-                                                <div class="notloggedin" style="">
+                                                <div >
                                                     <div style="text-align: left;">Emby username/email:</div>
                                                     <p>			<input id="username" style="width: 100%;" type="text" class="not-empty"></p>
                                                     <div style="text-align: left; margin-top: 10px;">Password:</div>
                                                     <p>			<input id="pw" style="width: 100%;" type="password" class="not-empty"></p>
-                                                </div>
-                                                <div class="loggedin" style="display: none;">
-                                                    <p>			<img id="userimage" style="height: 100px;" src="resources/mb_logo_lt_pad.png" alt=""></p>
-                                                    <h3>Hello <span id="loggedinuser"></span></h3>
-                                                    <p>			<small><a id="notyou" class="notimplemented" href="#" target="_blank">Not you?</a></small></p>
                                                 </div>
                                                 <div>
                                                     <label for="pin" style="display:block;text-align:left;">Pin:</label><input id="pin" style="width: 100%;" required="" type="text">
