--- a/src/freebsd-server.html
+++ b/src/freebsd-server.html
@@ -446,6 +446,7 @@
                                     <h2 style="margin:0;">Installation - BETA</h2>
                                 </div>
 
+                                <p>First, make sure your FreeBSD system is <b>configured for latest packages</b>.</p>
                                 <div><b>Install dependencies:</b></div>
                                 <div><code>sudo pkg install mono libass fontconfig freetype2 fribidi gnutls iconv opus samba48 sqlite3 libtheora libva libvpx libvorbis webp libx264 x265 libzvbi libraw ImageMagick6</code></div>
                                 <br />
