--- a/src/support.html
+++ b/src/support.html
@@ -423,7 +423,7 @@
                             </div> <!-- aio-icon-component -->
                         </div><div class="one-quarter">
                             <div class="aio-icon-component   style_2">
-                                <a class="aio-icon-box-link" href="https://github.com/MediaBrowser/Wiki/wiki" target=" _blank">
+                                <a class="aio-icon-box-link" href="https://support.emby.media" target=" _blank">
                                     <div class="aio-icon-box top-icon" style="">
                                         <div class="aio-icon-top">
                                             <div class="ult-just-icon-wrapper ">
@@ -465,21 +465,7 @@
                             </div> <!-- aio-icon-component -->
                         </div>
                     </div><!-- Row Backgrounds --><div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="" data-parallax-content="" data-parallax-content-sense="" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div><div class="g-cols wpb_row offset_wide">
-                        <div class="one-quarter">
-                            <div class="aio-icon-component   style_2">
-                                <a class="aio-icon-box-link" href="https://github.com/mediabrowser" target=" _blank">
-                                    <div class="aio-icon-box top-icon" style="">
-                                        <div class="aio-icon-top">
-                                            <div class="ult-just-icon-wrapper ">
-                                                <div class="aio-icon circle  animated fadeIn delay-03" data-animation="fadeIn" data-animation-delay="03" style="color:#333333;background:#ffffff;font-size:100px;display:inline-block;">
-                                                    <i class="Defaults-github"></i>
-                                                </div>
-                                            </div>
-                                        </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Github</h3></div> <!-- header --><div class="aio-icon-description" style="">Fork us on Github!</div> <!-- description -->
-                                    </div> <!-- aio-icon-box -->
-                                </a>
-                            </div> <!-- aio-icon-component -->
-                        </div>
+
 
                         <div class="one-quarter">
                             <div class="aio-icon-component   style_2">
