--- a/src/emby-for-kodi.html
+++ b/src/emby-for-kodi.html
@@ -428,8 +428,8 @@
                                 <div class="wpb_wrapper">
 
                                     <h2>Install the EmbyCon Add-on</h2>
-                                    <p>Just install the EmbyCon Add-on from the Offical Kodi Add-On Repository and you can connect directly to your Emby Server. EmbyCon lets you easily browse and play your Emby library using Kodi.</p>
-                                    <p>For more information, including a YouTube demonstration, visit the <a href="community/index.php?/topic/57016-embycon-kodi-addon" target="_blank">Emby community.</a></p>
+                                    <p>Just install the EmbyCon Add-on and you can connect directly to your Emby Server. EmbyCon lets you easily browse and play your Emby library using Kodi.</p>
+                                    <p>For more information, including a YouTube demonstration, visit the <a href="https://kodi.emby.tv" target="_blank">Emby community.</a></p>
                                     <h2>Or Use the Emby for Kodi Sync Add-On</h2>
                                     <p>The Emby for Kodi sync add-on has a richer feature set than EmbyCon, but requires a periodic syncing process to download data from your Emby Server. This syncing process can take a little while and may result in increased CPU and memory consumption on your Emby Server.</p>
                                     <p>Installation instructions can be found on our <a target="_blank" href="community/index.php?/topic/78547-embycon-faq">Emby for Kodi wiki.</a></p>
