--- a/src/support.html
+++ b/src/support.html
@@ -423,7 +423,7 @@
                             </div> <!-- aio-icon-component -->
                         </div><div class="one-quarter">
                             <div class="aio-icon-component   style_2">
-                                <a class="aio-icon-box-link" href="https://support.emby.media" target=" _blank">
+                                <a class="aio-icon-box-link" href="https://github.com/MediaBrowser/Wiki/wiki" target=" _blank">
                                     <div class="aio-icon-box top-icon" style="">
                                         <div class="aio-icon-top">
                                             <div class="ult-just-icon-wrapper ">
