Update Android/Fire TV

--- a/src/emby-for-android-tv.html
+++ b/src/emby-for-android-tv.html
@@ -467,7 +467,7 @@
                                     <p><img src="resources/atvgoogle.png"></p>
                                     <h2 style="margin-top:1em;">Rediscover your content</h2>
                                     <p>Emby for Android TV also uses the power of the server to help you find movies to watch for the first time or over and over.</p>
-                                    <p><img src="resources/5537f8e644beb_ftvsuggested.png"></p>
+                                    <p><img src="resources/atvsuggested.png"></p>
                                     <h2 style="margin-top:1em;">The Best Way to Watch Live TV</h2>
                                     <p>The Emby Live TV Guide helps you find what you're looking for quickly and easily.</p>
                                     <p><img src="resources/atvguide.png"></p>
