--- a/src/emby-for-fire-tv.html
+++ b/src/emby-for-fire-tv.html
@@ -437,13 +437,17 @@
                             <div class="wpb_text_column ">
                                 <div class="wpb_wrapper">
 
-                                    <h3>Download</h3>
+                                    <h3>Install from The App Store</h3>
                                     <p>Emby for Fire TV is available in the Amazon App Store.</p>
                                     <div>
                                         <a href="https://www.amazon.com/Emby-for-Fire-TV/dp/B00VVJKTW8/ref=sr_1_1?ie=UTF8&qid=1548609948&sr=8-1&keywords=emby" target="_blank"><img class="alignnone size-medium wp-image-5449" src="resources/amazonapp.png" alt="apstore" style="max-height:54px;"></a>
                                     </div>
 
-                                    <br />							<div>
+                                    <h3>Manual Installation</h3>
+                                    <div><a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/androidtv/app-amazon-release.apk">Download the apk</a></div>
+
+                                    <br />
+                                    <div>
                                         <span class="wpb_button align_left"><a href="https://github.com/MediaBrowser/Wiki/wiki/Android%20TV" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
                                     </div>
                                     <div>
