--- a/src/emby-for-nvidiashield.html
+++ b/src/emby-for-nvidiashield.html
@@ -437,11 +437,14 @@
                             <div class="wpb_text_column ">
                                 <div class="wpb_wrapper">
 
-                                    <h3>Download</h3>
+                                    <h3>Install from the App Store</h3>
                                     <p>Emby for NVIDIA Shield is available in the Google Play Store.</p>
                                     <div>
                                         <a href="https://play.google.com/store/apps/details?id=tv.emby.embyatv" target="_blank"><img class="alignnone size-medium wp-image-5449" src="resources/playsstore-300x98.png" alt="playsstore" style="max-height:54px;"></a>
                                     </div>
+
+                                    <h3>Manual Installation</h3>
+                                    <div><a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/androidtv/app-google-release.apk">Download the apk</a></div>
 
                                     <br />							<div>
                                         <span class="wpb_button align_left"><a href="https://github.com/MediaBrowser/Wiki/wiki/Android%20TV" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
